 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * $Id$
 */
 
TreeTank 4.16
-------------
+ Auto commit now default. User must no longer call commit. Auto commit
  commits after the modification of some nodes as well as before
  IWriteTransaction.close().
+ Idempotent close operation. Multiple calls do no longer hurt.
+ Added ID annotation for beans.
+ BeanUtil now serializing fields as attributes.
+ Added namespace and attribute getters to IReadTransaction.
+ Support wildcard suffix in FullTextAxis. It is activated by * as last
  character in token.
 
TreeTank 4.15
-------------
+ INode no longer part of public API; replaced by AbstractNode.
+ BeanUtil now supports byte[].
+ No longer make INode public. This lead to a variety of use cases mixing
  pure transaction cursor and node semantics. As a result, nobody really knew
  where the transaction cursor actually resided. These side-effects can be
  clearly avoided by a pure cursor-based approach.
+ Introduce concept of cursor stability: Always leave the cursor of a
  transaction where it was before calling a method except the method explicitly
  modifies the state of the transaction.
+ Moved bean-related stuff to beanlayer package.
+ Renamed UTF.convert() to UTF.getBytes([String|int]) 
  and UTF.parse[String|int](). Integer and Long methods are twice as fast and
  compatible to String.
+ BeanUtil now supporting boolean, int, long, float, double, and String.
+ Added FullText annotation to mark that Java bean field must be indexed.
+ Added BeanUtil to make Java beans persistent with TreeTank.
+ Added Session.removeSession() to safely remove a TreeTank file.

TreeTank 4.14
-------------